style: 导入用户/double 类型转换改用 valueOf 替代废弃装箱构造